# gitlab-compliance-checker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_TO_HUGGINGFACE.md  Dockerfile  HUGGINGFACE_DEPLOY.md  LICENSE  QUICK_DEPLOY.md  README.md  REPORT_SUMMARY.md  TECHNICAL_REFERENCE.md  app.py  debugproductivity.py  entrypoint.sh  generate_report.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_backend.py  server.js  test_app.py  test_changes.py  verify_batch_users.py  verify_contribution_fix.py
.gitlab/: issue_template.md  mr_template.md
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md  Feature Request.md  Refactoring.md
.gitlab/merge_request_templates/: Feature Request.md
.gitlab/merge_request_templates /: Bug.md  Default.md  Refactoring.md
.streamlit/: config.toml  config.yaml  rebuild_trigger
checks/: repo_compliance.py
gitlab_utils/: batch.py  client.py  commits.py  groups.py  issues.py  merge_requests.py  productivity_utils.py  projects.py  users.py
js/: complianceCheck.js  index.js  readUvLock.js  rules.js
modes/: batch_mode.py  compliance_mode.py  productivity_mode.py  user_profile.py
public/: style.css
tests/: test_batch_logic.py  test_client_utils.py  test_compliance_mode_helpers.py  test_debugproductivity.py  test_gitlab_utils_unit.py  test_profile_utils.py
user_profile/: profile_ui.py  profile_utils.py
views/: index.ejs
